view/adminhtml/web/css/sales_styles.css
/* ... */
/* tinka */
.buckaroo_magento2_payment_tinka:before {
    background: url(../images/buckaroo_magento2_tinka_title.svg) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: -4px;
    background-size: auto 26px;
    width: 73px;
    height: 31px;
    content: ' ';
    display :block;
}

/* ===================== Order Overview -  Credit Card / Debit Card Method Styling ======================= */

.buckaroo_magento2_payment_card_mastercard:before {
    background: url(../images/creditcard/ico-mc.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
 }

.buckaroo_magento2_payment_card_maestro:before {
    background: url(../images/creditcard/ico-mae.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

.buckaroo_magento2_payment_card_amex:before {
    background: url(../images/creditcard/ico-ae.png) no-repeat;
    margin-top: -3px;
    float: left;
    margin-right: 7px;
    background-size: auto 27px;
    width: 40px;
    height: 28px;
    content: ' ';
}

.buckaroo_magento2_payment_card_visa:before {
    background: url(../images/creditcard/ico-vi.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

.buckaroo_magento2_payment_card_visaelectron:before {
    background: url(../images/creditcard/ico-ve.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
 }

.buckaroo_magento2_payment_card_vpay:before {
    background: url(../images/creditcard/ico-vp.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

.buckaroo_magento2_payment_card_cartebleuevisa:before {
    background: url(../images/creditcard/ico-cbl.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

.buckaroo_magento2_payment_card_cartebancaire:before {
    background: url(../images/creditcard/ico-cb.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

.buckaroo_magento2_payment_card_dankort:before {
    background: url(../images/creditcard/ico-da.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

.buckaroo_magento2_payment_card_nexi:before {
    background: url(../images/creditcard/ico-nx.png) no-repeat;
    margin-top: -2px;
    float: left;
    margin-right: 7px;
    background-size: auto 23px;
    width: 40px;
    height: 23px;
    content: ' ';
}

/* giftcards */

.buckaroo_magento2_payment_allgiftcards:before {
    background: url(../images/buckaroo_magento2_ajaxgiftcard_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

.buckaroo_magento2_payment_ajaxgiftcard:before {
    background: url(../images/buckaroo_magento2_ajaxgiftcard_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

.buckaroo_magento2_payment_vvvgiftcard:before {
    background: url(../images/buckaroo_magento2_vvvgiftcard_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

.buckaroo_magento2_payment_boekenbon:before {
    background: url(../images/buckaroo_magento2_boekenbon_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

.buckaroo_magento2_payment_fashioncheque:before {
    background: url(../images/buckaroo_magento2_fashioncheque_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

.buckaroo_magento2_payment_yourgift:before {
    background: url(../images/buckaroo_magento2_yourgift_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

.buckaroo_magento2_payment_webshopgiftcard:before {
    background: url(../images/buckaroo_magento2_webshopgiftcard_title.png) no-repeat;
    float: left;
    margin-right: 10px;
    margin-top: 0px;
    background-size: auto 23px;
    width: 30px;
    height: 30px;
    content: ' ';
    display :block;
}

/* ===================== Creditmemo create -  Warning message regarding rounding errors ======================= */
.buckaroo-magento2-warning-message {
    text-align: justify;
    margin-top: 3rem;
}

